@@ -3,7 +3,7 @@ static const char* const rcsid = "$Id$";
 /*                               -*- Mode: C -*-
  * ope-edit.c --
  *
- * Copyright (c) 1991-2003 Francois Felix Ingrand.
+ * Copyright (c) 1991-2010 Francois Felix Ingrand.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -41,10 +41,12 @@ static const char* const rcsid = "$Id$";
 #include <X11/Intrinsic.h>
 #include <X11/cursorfont.h>
 #include <Xm/Xm.h>
-
 #include <Xm/ScrollBar.h>
 #include <Xm/DrawingA.h>
 #include <Xm/ToggleB.h>
+#include <Xm/Text.h>
+#include <Xm/TextF.h>
+#include <Xm/SelectioB.h>
 
 /* #include <X11/X10.h> */
 
