@@ -3,7 +3,7 @@ static const char* const rcsid = "$Id$";
 /*                               -*- Mode: C -*-
  * ope-menu.c --
  *
- * Copyright (c) 1991-2003 Francois Felix Ingrand.
+ * Copyright (c) 1991-2010 Francois Felix Ingrand.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -44,8 +44,10 @@ static const char* const rcsid = "$Id$";
 #include <Xm/PushB.h>			  /* PushButton Gadget for menu button */
 #include <Xm/PushBG.h>			  /* PushButton Gadget for menu button */
 #include <Xm/Frame.h>
-
 #include <Xm/Separator.h>
+#include <Xm/List.h>
+#include <Xm/Text.h>
+#include <Xm/SelectioB.h>
 
 #include "oprs-type.h"
 
