@@ -3,7 +3,7 @@ static const char* const rcsid = "$Id$";
 /*                               -*- Mode: C -*- 
  * ope-rop.c -- 
  * 
- * Copyright (c) 1991-2003 Francois Felix Ingrand.
+ * Copyright (c) 1991-2010 Francois Felix Ingrand.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -42,7 +42,8 @@ static const char* const rcsid = "$Id$";
 
 #include <X11/Intrinsic.h>
 #include <Xm/Xm.h>
-
+#include <Xm/List.h>
+#include <Xm/Text.h>
 #include <Xm/SelectioB.h>
 
 #include "macro.h"
